# ToDoBackend

./: requirements.txt  setup.cfg  sqlite3.db
src/: sqlite3.db
src/collection/: api_routes.py  app.py  config.py  config.yaml  database.py  jwt_mng.py
src/collection/controller/: login.py  todo.py
src/collection/model/: todo.py  users.py
src/collection/utils/: seriliazer.py
