[metadata]
name = coursera-scraping
version = 0.0.0
description = Trendyol Scraping
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
package_dir =
    = src
packages = find:
install_requires =
    uvicorn~=0.20.0
    requests~=2.28.1
    fastapi~=0.88.0
    PyYAML~=6.0
    SQLAlchemy~=1.4.45
    fastapi-jwt-auth~=0.5.0
    cryptography~=38.0.4

[options.packages.find]
where = src

[options.package_data]
* = *.json, *.gz